vscode/webviews/chat/cells/Cell.module.css
:root {
    --cell-spacing: 1rem;
}

.container {
    padding: 15px;
    display: flex;
    gap: 10px;

    border-bottom: solid 1px var(--vscode-sideBarSectionHeader-border);
}

.gutter {
    flex: 0 0 auto;
    width: 24px;
    overflow: hidden;
    text-align: center;
}

.content {
    flex: 1 0;
    min-width: 0;
}

.container--disabled {
    opacity: 0.5;
    pointer-events: none;
}

/**
 * Styles
 */

 /* Allow left border to be styled */
.container {
    position: relative;
}
.container::before {
    position: absolute;
    inset: 0;
    width: 2px;
    height: 100%;
    content: '';
}

/* 'context' style */
.container--style-context::before {
    background-image: linear-gradient(to bottom, #00cbec, #b200f8, #ff5543);
}

/* 'assistant' style */
body[data-vscode-theme-kind='vscode-light'] .container--style-assistant::before,
body[data-vscode-theme-kind='vscode-high-contrast-light'] .container--style-assistant::before {
    background-color: rgb(0 0 0 / 16%);
}
body[data-vscode-theme-kind='vscode-dark'] .container--style-assistant::before,
body[data-vscode-theme-kind='vscode-high-contrast'] .container--style-assistant::before {
    background-color: rgb(255 255 255 / 16%);
}
/* Background color: apply a slight tint */
body[data-vscode-theme-kind='vscode-light'] .container--style-assistant,
body[data-vscode-theme-kind='vscode-high-contrast-light'] .container--style-assistant {
    background-color: rgb(0 0 0 / 3%);
}
body[data-vscode-theme-kind='vscode-dark'] .container--style-assistant,
body[data-vscode-theme-kind='vscode-high-contrast'] .container--style-assistant {
    background-color: rgb(255 255 255 / 3%);
}

